tests/baselines/reference/parserImportDeclaration1.errors.txt
parserImportDeclaration1.ts(1,21): error TS2503: Cannot find namespace 'TypeScriptServices'.


==== parserImportDeclaration1.ts (1 errors) ====
    import TypeScript = TypeScriptServices.TypeScript;
                        ~~~~~~~~~~~~~~~~~~
!!! error TS2503: Cannot find namespace 'TypeScriptServices'.